--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Flashcard</title>
 </head>
 <body>
-    
+    <main>
+   
+    </main>
+    <footer>
+        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
+    </footer>
 </body>
 </html>
