--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <main>
-   
+   <section id="container">
+                <article class="cartao">
+                </article>
+        </section>
     </main>
     <footer>
         <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
