--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </section>
     </main>
     <footer>
-        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
+        <p>Projeto desenvolvido por vitória santos, sem fins lucrativos</p>
     </footer>
 </body>
 </html>
